--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link rel="stylesheet" href="bootstrap.min.css">
 
   <title>Advance App</title>
 </head>
@@ -21,7 +22,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
+  <script src="bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
